# phase2

./: CLAUDE.md  GEMINI.md  output.txt  package.json
.claude/skills/auth-skill/: skill.md
.claude/skills/bakend-developement/: skills.md
.claude/skills/database-skill/: skill.md
.claude/skills/frontend-development/: skill.md
.specify/memory/: constitution.md
agent/: AUTH_AGENT.md  DATABASE_AGENT.md  FASTAPI_BACKEND_AGENT.md  FRONTEND_AGENT.md
backend/: .env  .flake8  mypy.ini  pyproject.toml
backend/src/: .env  config.py  database.py  logging_config.py  main.py  middleware.py  rate_limiter.py
backend/src/api/: auth.py  todos.py
backend/src/models/: __init__.py  todo.py  user.py
backend/src/schemas/: todo.py
backend/src/services/: todo_service.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/auth/: layout.tsx
frontend/app/protected/: layout.tsx
frontend/components/auth/: LoginForm.tsx  SignUpForm.tsx  login-form.tsx  signup-form.tsx
frontend/components/providers/: auth-provider.tsx  protected-route.tsx
specs/: 003-intermediate-features.md
specs/001-backend-core-data-layer/: checklist.md  spec.md
specs/001-task-api-backend/: plan.md  quickstart.md  research.md  tasks.md
specs/002-authentication-security/: plan.md  spec-2-auth-jwt.md  spec.md  tasks.md
specs/003-frontend-app-and-integration/: plan.md  quickstart.md  spec.md  tasks.md
specs/004-ai-todo-chatbot/: plan.md  spec.md  tasks.md
(+51 files in other folders)
